kubernetes-cks/network-policies/03-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: backend
  policyTypes:
     - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              run: frontend
